--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -34,7 +34,7 @@ import { Image } from "astro:assets";
         Want to have a quick chat? You can DM me on Twitter or LinkedIn.
       </p>
     </div>
-    <div class="flex gap-4 mt-8 items-center">
+    <div class="flex gap-4 mt-8 items-center justify-center sm:justify-start">
       {
         SOCIALS.map((social) => (
           <a
